Fix IRQ handling: Implement proper 1-instruction delay for CLI/PLP/RTI and enable PRECISE_CPU_CYCLES
- Enable PRECISE_CPU_CYCLES in CPUC64.h for better timing granularity
- Add interrupt_delay mechanism to both MOS6510 (C64) and MOS6502_1541 (1541)
- Remove immediate 'goto handle_int' from CLI, PLP, RTI instructions
- Set interrupt_delay=1 instead, allowing one instruction delay before IRQ service
- Initialize interrupt_delay in Reset() and AsyncReset() for both CPUs
- Add delay check at top of EmulateLine for both CPU implementations
- Improves compatibility with timing-sensitive games like Eye of the Beholder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -201,6 +201,9 @@ if(USB_HID_ENABLED)
     message(STATUS "USB CDC stdio disabled (USB HID Host is enabled)")
 else()
     pico_enable_stdio_usb(murmfrodo4 1)
+    # Explicitly link TinyUSB Device to ensure it's pulled in for stdio
+    target_link_libraries(murmfrodo4 tinyusb_device tinyusb_board)
+    message(STATUS "USB CDC stdio ENABLED (USB HID Host is disabled)")
 endif()
 pico_enable_stdio_uart(murmfrodo4 1)
 
