--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ set(FIRMWARE_VERSION "v1.02")
 set(PICO_BOARD pico2 CACHE STRING "Pico board type")
 
 # Board configuration variant (M1, M2)
-set(BOARD_VARIANT "M2" CACHE STRING "Board variant: M1 or M2")
+set(BOARD_VARIANT "M1" CACHE STRING "Board variant: M1 or M2")
 
 set(VIDEO_TYPE "VGA" CACHE STRING "Video output: HDMI or VGA")
 
@@ -32,10 +32,10 @@ set(VIDEO_TYPE "VGA" CACHE STRING "Video output: HDMI or VGA")
 set(AUDIO_TYPE "PWM" CACHE STRING "Audio output: I2S or PWM")
 
 # MOS2 support (generate .m1p2 or .m2p2 for Murmulator OS instead of .uf2)
-option(MOS2 "Build for Murmulator OS (m1p2/m2p2 format)" ON)
+option(MOS2 "Build for Murmulator OS (m1p2/m2p2 format)" OFF)
 
-# CPU overclock configuration (252, 378, 504 MHz)
-set(CPU_SPEED "428" CACHE STRING "CPU clock in MHz: 252, 378, 504")
+# CPU overclock configuration (252, 378, 428(VGA), 504 MHz)
+set(CPU_SPEED "252" CACHE STRING "CPU clock in MHz: 252, 378, 428, 504")
 
 # PSRAM speed configuration (84, 100, 133, 166 MHz target)
 set(PSRAM_SPEED "84" CACHE STRING "PSRAM max frequency in MHz: 84, 100, 133, 166")
