--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,24 +18,28 @@ cmake_minimum_required(VERSION 3.13)
 set(BUILD_NAME "murmc64")
 
 # Firmware version string (set by release.sh or manually)
-set(FIRMWARE_VERSION "v1.02")
+set(FIRMWARE_VERSION "v1.03")
 
 # Set board to Pico 2 (RP2350)
 set(PICO_BOARD pico2 CACHE STRING "Pico board type")
 
 # Board configuration variant (M1, M2)
 option(BOARD_VARIANT "M1 or M2" "M1")
+set(BOARD_VARIANT "M2")
 
 option(VIDEO_TYPE "VGA or HDMI" "VGA")
+set(VIDEO_TYPE "VGA")
 
 # Audio output configuration (I2S or PWM)
-option(AUDIO_TYPE "Audio output configuration (I2S or PWM)" "I2S")
+option(AUDIO_TYPE "Audio output configuration (I2S or PWM)" "PWM")
+set(AUDIO_TYPE "PWM")
 
 # MOS2 support (generate .m1p2 or .m2p2 for Murmulator OS instead of .uf2)
 option(MOS2 "MOS2 support" OFF)
 
 # CPU overclock configuration (252, 378, 428(VGA), 504 MHz)
 option(CPU_SPEED "CPU overclock configuration (252, 378, 428(VGA), 504 MHz)" "252")
+set(CPU_SPEED "252")
 
 # PSRAM speed configuration (84, 100, 133, 166 MHz target)
 set(PSRAM_SPEED "84" CACHE STRING "PSRAM max frequency in MHz: 84, 100, 133, 166")
